2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workptr’ from global state of rcsclean(1).

	* rcsclean.c (workptr): Delete var.
	(cleanup): Take 2nd arg WORKPTR.
	(main): Add auto var ‘workptr’; update calls to ‘cleanup’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘getcurdate_buffer’ from global state of ci(1).

	* ci.c (struct bud): Add member ‘getcurdate_buffer’.
	(getcurdate_buffer): Delete var.
	(getcurdate): Take BUD; use ‘bud->getcurdate_buffer’.
	(getlogmsg): Drop ‘const’ from arg ‘bud’; update call to ‘getcurdate’.
	(main): Update call to ‘getcurdate’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘logmsg’ from global state of ci(1).

	* ci.c (struct reason): New.
	(logmsg): Delete var.
	(getlogmsg): Dno't take MSG; take REASON; use ‘reason->delayed’.
	(main): Delete auto var ‘msg’; add auto var ‘reason’;
	use ‘reason.upfront’; update calls to ‘getlogmsg’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘targetdelta’ from global state of ci(1).

	* ci.c (targetdelta): Delete var.
	(struct bud): Add member ‘target’.
	(addbranch, addelta, getlogmsg): Use ‘bud->target’.
	(main): Use ‘bud.target’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘keepflag’ from global state of ci(1).

	* ci.c (keepflag): Delete var.
	(struct bud): Add member ‘keep’.
	(getlogmsg): Use ‘bud->keep’.
	(main): Use ‘bud.keep’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘exfile’ from global state of ci(1).

	* ci.c (exfile): Delete var.
	(struct work): Add member ‘ex’.
	(cleanup): Use ‘work->ex’.
	(xpandfile): Don't take UNEXFILE; instead, take WORK.
	(main): Init ‘work.ex’ to NULL;
	update call to ‘xpandfile’; use ‘work.ex’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use program-specific variable name for extracted help.

	* ci.c (main): Update ‘program’ initialization form.
	* co.c (main): Likewise.
	* ident.c (main): Likewise.
	* merge.c (main): Likewise.